--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>v11</title>
 </head>
 <body>
     <header>
         <nav>
+            <h3>Home</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Home</a></li>
