--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <h3>Home</h3>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Story</a></li>
             </ul>
         </nav>
     </header>
